--- a/client/src/app/components/park-details/park-details.component.css
+++ b/client/src/app/components/park-details/park-details.component.css
@@ -3,7 +3,7 @@
     margin: 12px 0 30px;
     font-size: 65px;
     font-weight: 600;
-    color: #007E7A;
+    color: #004685;
 }
 
 .header-team-logo {
