--- a/client/src/app/components/app/app.component.html
+++ b/client/src/app/components/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-navbar></app-navbar>
-<div [ngClass]="{'main': !isHomeRoute}">
+<div [ngClass]="{'main': !isHomeRoute && !isTicketRoute}">
     <app-flash></app-flash>
     <router-outlet></router-outlet>
 </div>
