--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
     <a routerLink="/trips" class="btn btn-primary">View My Trips</a>
     <a routerLink="/trip/new" class="btn btn-outline">Log New Trip</a>
 </div>
-
+<h3 class="tagline">Helping you visit every Major League ballpark</h3>
 <div class="content-container row">
     <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="card">
@@ -29,10 +29,7 @@
                 <h3 class="content-heading">EXPLORE PARKS</h3>
             </div>
             <div class="card-block">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
-                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati
-                libero
+                Not sure which ballpark to check out next? See what other users have posted about each one before you plan your next trip.
             </div>
         </div>
     </div>
@@ -45,11 +42,9 @@
                 <h3 class="content-heading">TRACK PROGRESS</h3>
             </div>
             <div class="card-block">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
-                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati
-                libero ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat
-                illum?
+                Track your progress as you visit all 30 Major League ballparks. You'll unlock badges as you post photos and document each
+                trip you make around the country. Ground Out will keep a scrapbook of your journey for you to revist any
+                time.
             </div>
         </div>
     </div>
@@ -62,9 +57,7 @@
                 <h3 class="content-heading">FIND TICKETS</h3>
             </div>
             <div class="card-block">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab repudiandae dolore repellat, ad voluptates obcaecati libero
-                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
-                ipsam corrupti praesentium nesciunt, quam nisi vitae unde autem numquam. Ipsa perferendis repellat illum?
+                The Ground Out Ticket Finder scours Seatgeek to find the tickets you want. Search by price, distance, and date.
             </div>
         </div>
     </div>
