--- a/client/src/app/modules/auth/components/login/login.component.html
+++ b/client/src/app/modules/auth/components/login/login.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <button [disabled]="form.invalid || isProcessing" type="submit" class="btn btn-primary">LOG IN</button>
-      <a routerLink="/register" class="signup">Sign up for a new account</a>
+      <a routerLink="/auth/register" class="signup">Sign up for a new account</a>
     </div>
   </form>
 </div>
