--- a/client/src/app/modules/trips/components/user-trips/user-trips.component.html
+++ b/client/src/app/modules/trips/components/user-trips/user-trips.component.html
@@ -17,7 +17,7 @@
           </p>
         </div>
         <div class="card-footer">
-          <a routerLink="/trip/new" class="btn btn-primary">Log New Trip</a>
+          <a routerLink="/trips/new" class="btn btn-primary">Log New Trip</a>
         </div>
       </div>
     </div>
