--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
   <div class="header-nav">
     <a *ngIf="isLoggedIn" routerLink="/trips" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-link nav-text">Scrapbook</a>
     <a *ngIf="isLoggedIn" routerLink="/trips/new" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-link nav-text">Log Trip</a>
-    <a routerLink="/tickets" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-link nav-text">Find Tickets</a>
+    <a routerLink="/events/finder" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-link nav-text">Find Tickets</a>
   </div>
   <div class="header-actions">
 
