--- a/client/src/app/modules/auth/components/register/register.component.html
+++ b/client/src/app/modules/auth/components/register/register.component.html
@@ -46,7 +46,7 @@
 
       <!-- Submit -->
       <button [disabled]="!form.valid || isProcessing" type="submit" class="btn btn-primary">SIGN UP</button>
-      <a routerLink="/login" class="signup">Already registered? Sign in</a>
+      <a routerLink="/auth/login" class="signup">Already registered? Sign in</a>
 
     </div>
   </form>
