--- a/client/src/app/modules/park-events/components/park-details/park-details.component.html
+++ b/client/src/app/modules/park-events/components/park-details/park-details.component.html
@@ -54,7 +54,7 @@
           National League
         </a>
         <clr-vertical-nav-group-children *clrIfExpanded="true">
-          <a [routerLink]="['/park', team]" [ngClass]="{'active': team === park?.team}" clrVerticalNavLink *ngFor="let team of nlTeamList">{{team}}</a>
+          <a [routerLink]="['/events', team]" [ngClass]="{'active': team === park?.team}" clrVerticalNavLink *ngFor="let team of nlTeamList">{{team}}</a>
         </clr-vertical-nav-group-children>
       </clr-vertical-nav-group>
       <clr-vertical-nav-group>
@@ -63,7 +63,7 @@
           American League
         </a>
         <clr-vertical-nav-group-children *clrIfExpanded="true">
-          <a [routerLink]="['/park', team]" [ngClass]="{'active': team === park?.team}" clrVerticalNavLink *ngFor="let team of alTeamList">{{team}}</a>
+          <a [routerLink]="['/events', team]" [ngClass]="{'active': team === park?.team}" clrVerticalNavLink *ngFor="let team of alTeamList">{{team}}</a>
         </clr-vertical-nav-group-children>
       </clr-vertical-nav-group>
     </clr-vertical-nav>
