adding links to homepage

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -26,7 +26,9 @@
                 <div class="content-img-circle dark-blue">
                     <img class="content-img" src="/assets/images/017-field.png" alt="find tickets">
                 </div>
-                <h3 class="content-heading">EXPLORE PARKS</h3>
+                <a routerLink="/events/Braves">
+                    <h3 class="content-heading">EXPLORE PARKS</h3>
+                </a>
             </div>
             <div class="card-block">
                 Not sure which ballpark to check out next? See what other users have posted about each one before you plan your next trip.
@@ -39,7 +41,9 @@
                 <div class="content-img-circle red">
                     <img class="content-img" src="/assets/images/007-tactics.png" alt="find tickets">
                 </div>
-                <h3 class="content-heading">TRACK PROGRESS</h3>
+                <a routerLink="/trips">
+                    <h3 class="content-heading">TRACK PROGRESS</h3>
+                </a>
             </div>
             <div class="card-block">
                 Track your progress as you visit all 30 Major League ballparks. You'll unlock badges as you post photos and document each
@@ -54,7 +58,9 @@
                 <div class="content-img-circle gold">
                     <img class="content-img" src="/assets/images/021-ticket.png" alt="find tickets">
                 </div>
-                <h3 class="content-heading">FIND TICKETS</h3>
+                <a routerLink="/events">
+                    <h3 class="content-heading">FIND TICKETS</h3>
+                </a>
             </div>
             <div class="card-block">
                 The Ground Out Ticket Finder scours Seatgeek to find the tickets you want. Search by price, distance, and date.
