--- a/client/src/app/modules/park-events/components/ticket-finder/ticket-finder.component.html
+++ b/client/src/app/modules/park-events/components/ticket-finder/ticket-finder.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row main">
     <div class="col-lg-5 col-md-8 col-sm-12 col-xs-12">
 
         <!-- Form -->
@@ -24,11 +24,11 @@
                         </div>
                         <div class="form-group">
                             <label for="begin">Begin Date</label>
-                            <input formControlName="beginDate" type="date" name="begin" value="">
+                            <input clrDate formControlName="beginDate" type="date" name="begin" value="">
                         </div>
                         <div class="form-group">
                             <label for="end">End Date</label>
-                            <input formControlName="endDate" type="date" name="end" value="">
+                            <input clrDate formControlName="endDate" type="date" name="end" value="">
                         </div>
                         <div class="form-group">
                             <label for="price1">Min Ticket Price</label>
