--- a/client/src/app/modules/park-events/components/ticket-list/ticket-list.component.html
+++ b/client/src/app/modules/park-events/components/ticket-list/ticket-list.component.html
@@ -38,7 +38,7 @@
               <span>Park: {{event.venue.name}}</span>
             </div>
             <div>
-              <span>Price: {{event.stats.lowest_price | currency:'USD':true}} - {{event.stats.highest_price | currency:'USD':true}}</span>
+              <span>Price: {{event.stats.lowest_price | currency:'USD'}} - {{event.stats.highest_price | currency:'USD'}}</span>
             </div>
             <div>
               <span>Location: {{event.venue.display_location}}</span>
