--- a/client/src/app/modules/core/components/app-flash/app-flash.component.css
+++ b/client/src/app/modules/core/components/app-flash/app-flash.component.css
@@ -1,12 +1,8 @@
-.alert {
+.go-alert {
     padding: 9px 12px 3px 12px;
     position: fixed;
     z-index: 10;
     top: 0;
     right: 40px;
     width: 500px;
-}
-
-.alert-item {
-    margin-top: 6px;
 }
