--- a/client/src/app/modules/trips/components/trip-logger/trip-logger.component.html
+++ b/client/src/app/modules/trips/components/trip-logger/trip-logger.component.html
@@ -7,7 +7,7 @@
           <!-- Date -->
           <div class="form-group">
             <label for="tripDate" class="required">Date</label>
-            <input [(ngModel)]="trip.tripDate" type="date" name="tripDate">
+            <input clrDate [(ngModel)]="trip.tripDate" type="date" name="tripDate">
           </div>
           <!-- Park -->
           <div class="form-group">
