add team home component and child routes

--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
                 <div class="content-img-circle dark-blue">
                     <img class="content-img" src="/assets/images/017-field.png" alt="find tickets">
                 </div>
-                <a routerLink="/events/Braves">
+                <a routerLink="/events">
                     <h3 class="content-heading">EXPLORE PARKS</h3>
                 </a>
             </div>
