--- a/client/src/app/modules/park-events/components/park-details-home/park-details-home.component.html
+++ b/client/src/app/modules/park-events/components/park-details-home/park-details-home.component.html
@@ -1,10 +1,28 @@
 <div class="main-container">
   <div class="content-container">
-    <div class="content-area" id="park-side-nav">
-      <app-park-details-sidebar></app-park-details-sidebar>
-    </div>
     <div class="content-area">
-      <p>Home Works</p>
+      <router-outlet></router-outlet>
     </div>
+    <!-- Side Nav -->
+    <clr-vertical-nav [clrVerticalNavCollapsible]="true">
+      <clr-vertical-nav-group>
+        <a clrVerticalNavLink>
+          <clr-icon shape="id-badge" class="is-error" clrVerticalNavIcon></clr-icon>
+          National League
+        </a>
+        <clr-vertical-nav-group-children *clrIfExpanded="true">
+          <a [routerLink]="['/events', team]" [ngClass]="{'active': team === selectedTeam}" clrVerticalNavLink *ngFor="let team of nlTeamList">{{team}}</a>
+        </clr-vertical-nav-group-children>
+      </clr-vertical-nav-group>
+      <clr-vertical-nav-group>
+        <a clrVerticalNavLink>
+          <clr-icon shape="id-badge" class="is-info" clrVerticalNavIcon></clr-icon>
+          American League
+        </a>
+        <clr-vertical-nav-group-children *clrIfExpanded="true">
+          <a [routerLink]="['/events', team]" [ngClass]="{'active': team === selectedTeam}" clrVerticalNavLink *ngFor="let team of alTeamList">{{team}}</a>
+        </clr-vertical-nav-group-children>
+      </clr-vertical-nav-group>
+    </clr-vertical-nav>
   </div>
 </div>
