--- a/client/src/app/modules/trips/components/user-trips/user-trips.component.html
+++ b/client/src/app/modules/trips/components/user-trips/user-trips.component.html
@@ -5,7 +5,7 @@
       <div class="card">
         <div class="card-header">
           <div class="content-img-circle dark-blue">
-            <img class="content-img" src="/assets/images/010-whistle.png" alt="find tickets">
+            <img class="content-img" src="/assets/images/029-cap.png" alt="find tickets">
           </div>
           <h3 class="content-heading">WELCOME!</h3>
         </div>
