--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -10,8 +10,8 @@
 </div>
 <!-- Auth buttons -->
 <div *ngIf="!isLoggedIn" class="row flex-items-xs-center nav-button-group">
-    <a routerLink="/auth/login" class="btn btn-outline">Log in</a>
-    <a routerLink="/auth/register" class="btn btn-primary">Get Started</a>
+    <a routerLink="/auth/login" class="btn btn-outline col-xs-12 col-sm-6 col-md-2">Log in</a>
+    <a routerLink="/auth/register" class="btn btn-primary col-xs-12 col-sm-6 col-md-2">Get Started</a>
 </div>
 <!-- Trip nav buttons -->
 <div *ngIf="isLoggedIn" class="row flex-items-xs-center nav-button-group">
