--- a/client/src/app/modules/park-events/components/park-details-home/park-details-home.component.html
+++ b/client/src/app/modules/park-events/components/park-details-home/park-details-home.component.html
@@ -4,7 +4,7 @@
       <router-outlet></router-outlet>
     </div>
     <!-- Side Nav -->
-    <clr-vertical-nav [clrVerticalNavCollapsible]="true">
+    <clr-vertical-nav [clrVerticalNavCollapsible]="true" [clr-nav-level]="2">
       <clr-vertical-nav-group>
         <a clrVerticalNavLink>
           <clr-icon shape="id-badge" class="is-error" clrVerticalNavIcon></clr-icon>
